[package]
name = "jsniper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jsniper"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
csv = "1.3"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
futures = "0.3"
anyhow = "1.0"
